# magus-opensecmcp

./: Cargo.toml  LICENSE  README.md  config.yaml  src
.github/workflows/: ci.yml
registry-packs/: filesystem.yaml
src/: audit.rs  downstream.rs  hasher.rs  main.rs  membrane.rs  provenance.rs  quota.rs  registry.rs
