[package]
name = "magus-opensecmcp"
version = "0.1.0"
edition = "2021"
description = "A deterministic execution firewall for MCP agents."
license = "Apache-2.0"

[[bin]]
name = "magus-gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
aho-corasick = "1.1"
anyhow = "1"
dirs = "5.0"
chrono = "0.4"

blake3 = "1.5"
getrandom = "0.2"
uuid = { version = "1.10", features = ["v4"] }
indexmap = "2.2"
